--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     post = "/:year/:month/:day/:slug/"
 
 [[menu.main]]
-    name = "Welcome!"
+    name = "⚠️"
     url = "/about/"
 
 [params]
